Fix layout issues in products.css

--- a/EcommerceFrontend/src/views/productos/productos.css
+++ b/EcommerceFrontend/src/views/productos/productos.css
@@ -29,7 +29,9 @@
   background: none;
   border: none;
   font-size: 20px;
+  font-weight: bold;
   cursor: pointer;
+  color: black;
 }
 
 .modal-image {
